added ecore models for elements, graphical annotation and GUI

--- a/org.modelica.emf/plugin.xml
+++ b/org.modelica.emf/plugin.xml
@@ -12,296 +12,9 @@
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Program"
-            class="org.modelica.Absyn.Program.ProgramPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Within"
-            class="org.modelica.Absyn.Within.WithinPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Class"
-            class="org.modelica.Absyn.Class.ClassPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ClassDef"
-            class="org.modelica.Absyn.ClassDef.ClassDefPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/EnumDef"
-            class="org.modelica.Absyn.EnumDef.EnumDefPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/EnumLiteral"
-            class="org.modelica.Absyn.EnumLiteral.EnumLiteralPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ClassPart"
-            class="org.modelica.Absyn.ClassPart.ClassPartPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ElementItem"
-            class="org.modelica.Absyn.ElementItem.ElementItemPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Element"
-            class="org.modelica.Absyn.Element.ElementPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ConstrainClass"
-            class="org.modelica.Absyn.ConstrainClass.ConstrainClassPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ElementSpec"
-            class="org.modelica.Absyn.ElementSpec.ElementSpecPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/InnerOuter"
-            class="org.modelica.Absyn.InnerOuter.InnerOuterPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Import"
-            class="org.modelica.Absyn.Import.ImportPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ComponentItem"
-            class="org.modelica.Absyn.ComponentItem.ComponentItemPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ComponentCondition"
-            class="org.modelica.Absyn.ComponentCondition.ComponentConditionPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Component"
-            class="org.modelica.Absyn.Component.ComponentPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/EquationItem"
-            class="org.modelica.Absyn.EquationItem.EquationItemPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/AlgorithmItem"
-            class="org.modelica.Absyn.AlgorithmItem.AlgorithmItemPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Equation"
-            class="org.modelica.Absyn.Equation.EquationPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/AlgorithmStatement"
-            class="org.modelica.Absyn.AlgorithmStatement.AlgorithmStatementPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Modifications"
-            class="org.modelica.Absyn.Modifications.ModificationsPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ElementArg"
-            class="org.modelica.Absyn.ElementArg.ElementArgPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/RedeclareKeywords"
-            class="org.modelica.Absyn.RedeclareKeywords.RedeclareKeywordsPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Each"
-            class="org.modelica.Absyn.Each.EachPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ElementAttributes"
-            class="org.modelica.Absyn.ElementAttributes.ElementAttributesPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Variability"
-            class="org.modelica.Absyn.Variability.VariabilityPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Direction"
-            class="org.modelica.Absyn.Direction.DirectionPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ArrayDim"
-            class="org.modelica.Absyn.ArrayDim.ArrayDimPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Exp"
-            class="org.modelica.Absyn.Exp.ExpPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/FunctionArgs"
-            class="org.modelica.Absyn.FunctionArgs.FunctionArgsPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/NamedArg"
-            class="org.modelica.Absyn.NamedArg.NamedArgPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Operator"
-            class="org.modelica.Absyn.Operator.OperatorPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Subscript"
-            class="org.modelica.Absyn.Subscript.SubscriptPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ComponentRef"
-            class="org.modelica.Absyn.ComponentRef.ComponentRefPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Path"
-            class="org.modelica.Absyn.Path.PathPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Restriction"
-            class="org.modelica.Absyn.Restriction.RestrictionPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Annotation"
-            class="org.modelica.Absyn.Annotation.AnnotationPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Comment"
-            class="org.modelica.Absyn.Comment.CommentPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/ExternalDecl"
-            class="org.modelica.Absyn.ExternalDecl.ExternalDeclPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/TimeStamp"
-            class="org.modelica.Absyn.TimeStamp.TimeStampPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/Iterators"
-            class="org.modelica.Absyn.Iterators.IteratorsPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.openmodelica.org/openmodelica.abstact.syntax/TypeSpec"
-            class="org.modelica.Absyn.TypeSpec.TypeSpecPackage"
-            genModel="model/OpenModelicaAbstactSyntax.genmodel"/>
+            uri="http://www.openmodelica.org/openmodelica.elements/3.1"
+            class="org.modelica.emf.ModelicaElements.ModelicaElementsPackage"
+            genModel="model/OpenModelicaElements.genmodel"/>
    </extension>
 
 </plugin>
