--- a/modelicaml/org.openmodelica.modelicaml.profile/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.profile/build.properties
@@ -9,5 +9,4 @@ bin.includes = META-INF/,\
                plugin.properties,\
                palettes/,\
                templateModels/
-bin.excludes = resources/icons/icons32/,\
-               resources/icons/svg/
+bin.excludes = resources/icons/svg/
