--- a/modelicaml/org.openmodelica.modelicaml.helper/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.helper/plugin.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+    <extension
+         point="org.eclipse.ui.views">
+      <view
+            name="Intstantiated Requirements"
+            icon="icons/requirement.gif"
+            category="org.openmodelica.modelicaml.gen.modelica.category1"
+            class="org.openmodelica.modelicaml.helper.views.InstantiatedRequirementsView"
+            id="org.openmodelica.modelicaml.helper.view.instantiated.requirements">
+      </view>
+   </extension>
    
    <extension
          point="org.eclipse.ui.commands">
