--- a/modelicaml/org.openmodelica.modelicaml.tabbedproperties.editors/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.tabbedproperties.editors/plugin.xml
@@ -95,6 +95,12 @@
                indented="true"
                label="Guard Code">
          </propertyTab>
+         <propertyTab
+               category="org.eclipse.papyrus"
+               id="org.openmodelica.modelicaml.tabbedproperties.assert.code.tab"
+               indented="true"
+               label="Assert Condition">
+         </propertyTab>
       </propertyTabs>
    </extension>
    <extension
@@ -289,6 +295,19 @@
                filter="org.openmodelica.modelicaml.tabbedproperties.editors.filters.ActivityEdgeGuardCodePropertySectionEditorFilter"
                id="org.openmodelica.modelicaml.tabbedproperties.activityedgeguard.code.tab.section"
                tab="org.openmodelica.modelicaml.tabbedproperties.activityedgeguard.code.tab">
+            <input
+                  type="org.eclipse.gmt.modisco.infra.browser.uicore.internal.model.ModelElementItem">
+            </input>
+            <input
+                  type="org.eclipse.papyrus.diagram.common.editparts.IUMLEditPart">
+            </input>
+         </propertySection>
+         <propertySection
+               class="org.openmodelica.modelicaml.tabbedproperties.editors.sections.AssertCodeSection"
+               enablesFor="1"
+               filter="org.openmodelica.modelicaml.tabbedproperties.editors.filters.AssertCodePropertySectionEditorFilter"
+               id="org.openmodelica.modelicaml.tabbedproperties.assert.code.tab.section"
+               tab="org.openmodelica.modelicaml.tabbedproperties.assert.code.tab">
             <input
                   type="org.eclipse.gmt.modisco.infra.browser.uicore.internal.model.ModelElementItem">
             </input>
