--- a/modelicaml/org.openmodelica.modelicaml.perspective/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.perspective/plugin.xml
@@ -5,7 +5,7 @@
          point="org.eclipse.ui.perspectives">
       <perspective
             class="org.openmodelica.modelicaml.perspective.perspectives.PapyrusModelicaMLPerspective"
-            icon="icons/releng_gears.gif"
+            icon="icons/modelicaml_logo_16x16_v02.png"
             id="org.openmodelica.modelicaml.perspective"
             name="ModelicaML Modeling">
       </perspective>
