--- a/org.modelica.mdt.ui/src/org/modelica/mdt/ui/editor/ModelicaActions.properties
+++ b/org.modelica.mdt.ui/src/org/modelica/mdt/ui/editor/ModelicaActions.properties
@@ -3,3 +3,7 @@ ModelicaCorrectIndentationAction.label=Correct Indentation@Ctrl+I
 ModelicaCorrectIndentationAction.tooltip=Correct Indentation
 ModelicaCorrectIndentationAction.image=
 ModelicaCorrectIndentationAction.description=Corrects the indentation of the selected region
+ModelicaBuildAction.label=Build project@Alt+B
+ModelicaBuildAction.tooltip=Build project
+ModelicaBuildAction.image=
+ModelicaBuildAction.description=Builds the current project
