MOD: new images for value bindings, action create value binding container add return

--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
@@ -427,8 +427,9 @@
             <command
                   commandId="org.openmodelica.modelicaml.commands.CreateValueMediatorsContainerCommand"
                   icon="resources/icons/icons16/valueMediatorsContainer.png"
-                  label="ValueMediatorContainer"
-                  style="push">
+                  label="Value Mediator Container"
+                  style="push"
+                  tooltip="Value Mediator Container">
                <visibleWhen
                      checkEnabled="true">
                   <with
@@ -452,7 +453,7 @@
             <command
                   commandId="org.openmodelica.modelicaml.commands.CreateValueMediatorCommand"
                   icon="resources/icons/icons16/valueMediator.png"
-                  label="ValueMediator"
+                  label="Value Mediator"
                   style="push">
                <visibleWhen
                      checkEnabled="true">
