First release candidate

--- a/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
@@ -36,5 +36,12 @@
             file="contexts.xml">
       </contexts>
    </extension>
+   <extension
+         point="org.eclipse.papyrus.core.modelListener">
+      <listener
+            name="org.openmodelica.modelicaml.view.valuebindings.listener1"
+            realization="org.openmodelica.modelicaml.view.valuebindings.listeners.PapyrusListener">
+      </listener>
+   </extension>
 
 </plugin>
